--- a/popup.html
+++ b/popup.html
@@ -2,16 +2,25 @@
 <html>
   <head>
     <style>
-      button {
-        height: 30px;
-        width: 30px;
-        outline: none;
+      body {
+        padding: 10px;
+        min-width: 200px;
+        text-align: center;
+      }
+      select {
+        height: 40px;
+        width: 100%;
+        margin-top: 20px;
+      }
+      .logo {
+        max-height: 80px;
       }
     </style>
   </head>
   <body>
-    <h3>Select a theme:</h3>
+    <img class="logo" src="img/logo.png" />
     <select id="changeTheme">
+      <option value="" selected disabled hidden>Select a theme</option>
       <option value="code">Scary code</option>
       <option value="charts">Super fancy charts</option>
       <option value="math">Math that no one understands</option>
